refactor: change auth to token
